second commit for anyFeature

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Это первый коммит для anyFeature
+    Это второй коммит для anyFeature
 </body>
 </html>
