3 commit main branch

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Это второй коммит для main ветки
+    Это третий коммит для main ветки
 </body>
 </html>
