--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Это 4 коммит для anyFeature
+    Это 1 коммит для anyFeatTwo
 
     fdsfdsfdsf
     fdsfdsfdsfdsfdsf
