1 commit for fix

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Это третий коммит для main ветки
+    Это 1 коммит для fix ветки
 </body>
 </html>
