1 commit for testMergeTwoBranch

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    1 коммит для ветки testMerge
+    1 коммит для ветки testMergeTwoBranch
 </body>
 </html>
