--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    2 коммит для ветки testMerge
+    Это будет обший коммит между testMerge и testMergeTwoBranch
 </body>
 </html>
