--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    1 commit for mergerWithConf
+    Это будет ветка, с которой мы будем соединять другую ветку
 </body>
 </html>
