--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Это 7 коммит для main ветки
-
-    А вот тут я захотел еще какую-то информацию добавить в 4 коммит
+    Это 1 test branch
 </body>
 </html>
